@@ -1,9 +1,9 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2021 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2021 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-runtime-lib
- * Created on: 14 июн. 2018 г.
+ * Created on: 12 февр. 2021 г.
  *
  * lsp-runtime-lib is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
@@ -19,8 +19,8 @@
  * along with lsp-runtime-lib. If not, see <https://www.gnu.org/licenses/>.
  */
 
-#ifndef LSP_PLUG_IN_IO_STRINGREADER_H_
-#define LSP_PLUG_IN_IO_STRINGREADER_H_
+#ifndef LSP_PLUG_IN_IO_INMARKSEQUENCE_H_
+#define LSP_PLUG_IN_IO_INMARKSEQUENCE_H_
 
 #include <lsp-plug.in/runtime/version.h>
 #include <lsp-plug.in/runtime/LSPString.h>
@@ -30,42 +30,43 @@ namespace lsp
 {
     namespace io
     {
-        class InStringSequence: public IInSequence
+        /**
+         * Buffered sequence, extends the underlying sequenc with mark() and reset() methods
+         */
+        class InMarkSequence: public IInSequence
         {
-            private:
-                LSPString          *pString;
-                size_t              nOffset;
-                bool                bDelete;
-                ssize_t             nMark;
+            protected:
+                IInSequence        *pSequence;
+                ssize_t             nMarkPos;
                 ssize_t             nMarkLen;
+                ssize_t             nMarkMax;
+                lsp_wchar_t        *pBuf;
+                size_t              nBufCap;
+                bool                bClose;
 
             protected:
-                void    do_close();
+                status_t            do_close();
+                ssize_t             grow_buffer(size_t amount);
+                void                clear_mark();
 
             private:
-                InStringSequence & operator = (const InStringSequence &);
+                InMarkSequence & operator = (const InMarkSequence &);
 
             public:
-                explicit InStringSequence();
-                explicit InStringSequence(const LSPString *s);
-                explicit InStringSequence(LSPString *s, bool del = false);
-                virtual ~InStringSequence();
+                explicit InMarkSequence();
+                virtual ~InMarkSequence();
 
             public:
-                status_t                wrap(const LSPString *in);
-                status_t                wrap(LSPString *in, bool del);
-                status_t                wrap(const char *s, const char *charset);
-                status_t                wrap(const char *s);
+                status_t                wrap(InMarkSequence *in, bool close = false);
 
+                virtual status_t        close();
+
+            public:
                 virtual ssize_t         read(lsp_wchar_t *dst, size_t count);
 
                 virtual lsp_swchar_t    read();
 
-                virtual status_t        read_line(LSPString *s, bool force = false);
-
                 virtual ssize_t         skip(size_t count);
-
-                virtual status_t        close();
 
                 virtual status_t        mark(ssize_t limit);
 
@@ -74,4 +75,5 @@ namespace lsp
     }
 } /* namespace lsp */
 
-#endif /* LSP_PLUG_IN_IO_STRINGREADER_H_ */
+
+#endif /* LSP_PLUG_IN_IO_INMARKSEQUENCE_H_ */
